--- a/crm_app/templates/crm/base/footer.html
+++ b/crm_app/templates/crm/base/footer.html
@@ -4,11 +4,11 @@
           <div class="col-sm-6">
              <script>document.write(new Date().getFullYear())</script> © theskytrails
           </div>
-          <div class="col-sm-6">
+          {% comment %} <div class="col-sm-6">
              <div class="text-sm-end d-none d-sm-block">
                 Design & Develop by Armaan
              </div>
-          </div>
+          </div> {% endcomment %}
        </div>
     </div>
  </footer>
