--- a/crm_app/templates/crm/Leads/enquiry/edit_personalinfo.html
+++ b/crm_app/templates/crm/Leads/enquiry/edit_personalinfo.html
@@ -138,7 +138,7 @@
                                             </div> {% endcomment %}
                                             
                                             <center>
-                                                <span class="p-2">hel</span>
+                                                <span class="p-2"></span>
                                                 <input type="file" name="" id="" class="">
                                             </center>
 
